Start using Doubles for explicit measurements - Passes 76 of 76 tests